fix heights of elements on mobile, update readme

--- a/website/src/style.css
+++ b/website/src/style.css
@@ -19,8 +19,8 @@
 
 body {
     margin: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
     overflow: hidden;
     position: relative;
 }
